<resources>
    <string name="app_name">CRY</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Bitcoin</string>
    <string name="tab_text_2">Favorite</string>
    <string name="tab_text_3">Token</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="btnSave">Save</string>
    <string name="btnBack">back</string>
    <string name="setting_tv_username">Username</string>
    <string name="setting_tv_password">Password</string>
    <string name="setting_tv_language">Language</string>
    <string name="setting_tv_notification">Notification</string>
    <string name="allbitcoin_btn_back">back</string>
    <string name="allbitcoin_btn_forward">forward</string>
    <string name="login_tv_welcome">Welcome to CRY</string>
    <string name="login_btn_login">Login</string>
    <string name="login_btn_exit">Exit</string>
    <string name="login_tv_create">Do you already have account?</string>
    <string name="login_tv_username">username</string>
    <string name="login_tv_password">password</string>
    <string name="wrong_account">Wrong username or pass, please check again</string>
    <string name="login_tv_remember">remember</string>
    <string-array name="language_array">
        <item>Vietnamese</item>
        <item>Japan</item>
        <item>Korea</item>
        <item>China</item>
        <item>Germany</item>
        <item>English</item>
        <item>French</item>
    </string-array>
</resources>
